✨ use of semantic tags for accessibility

--- a/DAY4/WebAccessibility/Basics.html
+++ b/DAY4/WebAccessibility/Basics.html
@@ -6,6 +6,27 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <h1>The Page Header</h1>
+    </header>
+    <nav>
+      <a href="http://www.google.com">Go to google !</a>
+      <a href="http://www.msn.com">Go to msn !</a>
+      <a href="http://www.hotmail.com">Go to Hotmail !</a>
+    </nav>
+    <main>
+      <section>
+        <article>
+          <header>
+            <h2>Article header</h2>
+          </header>
+          <div>Any content</div>
+        </article>
+      </section>
+    </main>
+
+    <footer>Copyright @ 2025</footer>
+
     <img
       alt="Cypress used for End to End Testing"
       src="https://images.mailslurp.com/unsafe/fit-in/1920x0/assets/cypress-js---testing.jpg?quality=100&cacheBuster="
